--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     background-image: linear-gradient(to bottom, rgb(255, 0, 0), rgb(165, 42, 0), rgb(0, 0, 0));
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    margin: 0;
 }
 
 canvas{
@@ -14,6 +14,28 @@ canvas{
     max-width: 100%;
     max-height: 100%;
     font-family: 'Protest Guerrilla', sans-serif;
+}
+
+input{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20%;
+    height: 5%;
+    background-color: black;
+    color: yellow;
+    font-weight: bold;
+}
+
+button{
+    background-image: linear-gradient(to right, rgb(165, 42, 0), rgb(192, 192, 0), gold);
+    position: absolute;
+    top: 56%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10%;
+    height: 5.5%;
 }
 
 #dataCanvas{
